--- a/style/style.css
+++ b/style/style.css
@@ -102,13 +102,13 @@ ol li
   background: #323534 url(back.png) repeat-x;
   height: 137px;}
   
-#banner
+/*#banner
 { 
-  background: transparent url(banner2.jpg) no-repeat;
+  background: transparent url(fsu_p2.png) no-repeat;
   width: 860px;
   height: 180px;
   margin-bottom: 20px;
-  border: 10px solid #DDD;}
+  border: 10px solid #DDD;}*/
 
 #logo
 { width: 880px;
